--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -27,6 +27,9 @@ header {
   background: #ff0000;
   border-radius: 10px;
 }
+#openlist:hover {
+  background: #dced31;
+}
 #title {
   margin-right: 470px;
   margin-top: 8px;
@@ -71,7 +74,7 @@ header {
   margin-right: auto;
   margin-top: 4px;
   margin-bottom: 20px;
-  background-color: rgb(0, 223, 163);
+  background-color: #584bea;
   color: black;
   border: none;
   width: 150px;
@@ -84,7 +87,7 @@ header {
 #button:hover,
 #check:hover,
 #again:hover {
-  background-color: rgb(2, 146, 108);
+  background-color: #372ac7;
   cursor: pointer;
 }
 
@@ -106,7 +109,7 @@ header {
   width: 10%;
 }
 #check {
-  background-color: rgb(0, 223, 163);
+  background-color: #584bea;
   color: black;
   border: none;
   width: 150px;
@@ -138,7 +141,7 @@ header {
   color: orange;
 }
 #again {
-  background-color: rgb(0, 223, 163);
+  background-color: #584bea;
   color: black;
   border: none;
   width: 150px;
