--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -68,20 +68,22 @@ header {
   text-align: center;
   color: white;
 }
-#button {
+.buttonstyles {
   border-radius: 3px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 4px;
-  margin-bottom: 20px;
   background-color: #584bea;
   color: black;
   border: none;
   width: 150px;
   font-family: monospace;
-  height: 30px;
   font-size: 20px;
   font-weight: bold;
+}
+#button {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 4px;
+  margin-bottom: 20px;
+  height: 30px;
   display: block;
 }
 #button:hover,
@@ -109,14 +111,7 @@ header {
   width: 10%;
 }
 #check {
-  background-color: #584bea;
-  color: black;
-  border: none;
-  width: 150px;
-  font-family: monospace;
   height: 25px;
-  font-size: 20px;
-  font-weight: bold;
   border-radius: 3px;
   margin-bottom: 10px;
 }
@@ -141,14 +136,7 @@ header {
   color: orange;
 }
 #again {
-  background-color: #584bea;
-  color: black;
-  border: none;
-  width: 150px;
-  font-family: monospace;
   height: 25px;
-  font-size: 20px;
-  font-weight: bold;
   border-radius: 3px;
   margin-left: 10px;
 }
